--- a/index.html
+++ b/index.html
@@ -76,23 +76,23 @@
     <form id="haircut">
 
         <div>
-            <label>Select a date for your a haircut.</label>
+            <label>Select the date for your a haircut.</label>
             <input id="date" type="date"/>
         </div>
 
         <div>
-            <label>Special cut instructions?</label>
+            <label>Input your barber?</label>
             <input id="text-input2" type="text"/>
         </div>
 
         <div>
             <label>skin fade</label>
-            <input id="long-hair" type="radio" name="hair-style"/>
+            <input id="skin-fade" type="radio" name="hair-style"/>
         </div>
 
         <div>
             <label>taper fade</label>
-            <input id="short-hair" type="radio" name="hair-style"/>
+            <input id="taper-fade" type="radio" name="hair-style"/>
         </div>
 
         <div>
